Bug 352566 - Support opening webcal and webcals url. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D96159