mail/components/shell/nsMacShellService.cpp
@@ -40,7 +40,8 @@ nsMacShellService::IsDefaultClient(bool aStartupCheck, uint16_t aApps,
   if (aApps & nsIShellService::RSS)
     *aIsDefaultClient &= isDefaultHandlerForProtocol(CFSTR("feed"));
   if (aApps & nsIShellService::CALENDAR)
-    *aIsDefaultClient &= isDefaultHandlerForProtocol(CFSTR("webcal"));
+    *aIsDefaultClient &= isDefaultHandlerForProtocol(CFSTR("webcal")) &
+                         isDefaultHandlerForProtocol(CFSTR("webcals"));
 
   // if this is the first mail window, maintain internal state that we've
   // checked this session (so that subsequent window opens don't show the
@@ -59,8 +60,11 @@ nsMacShellService::SetDefaultClient(bool aForAllUsers, uint16_t aApps) {
     rv = setAsDefaultHandlerForProtocol(CFSTR("news"));
   if (NS_SUCCEEDED(rv) && aApps & nsIShellService::RSS)
     rv = setAsDefaultHandlerForProtocol(CFSTR("feed"));
-  if (NS_SUCCEEDED(rv) && aApps & nsIShellService::CALENDAR)
+  if (NS_SUCCEEDED(rv) && aApps & nsIShellService::CALENDAR) {
     rv = setAsDefaultHandlerForProtocol(CFSTR("webcal"));
+    NS_ENSURE_SUCCESS(rv, rv);
+    rv = setAsDefaultHandlerForProtocol(CFSTR("webcals"));
+  }
 
   return rv;
 }
